borsh-derive/src/internals/serialize/enums/snapshots/struct_variant_field.snap
---
source: borsh-derive/src/internals/serialize/enums/mod.rs
expression: pretty_print_syn_str(actual).unwrap()
---
impl borsh::ser::BorshSerialize for AB {
    fn serialize<__W: borsh::io::Write>(
        &self,
        writer: &mut __W,
    ) -> ::core::result::Result<(), borsh::io::Error> {
        let variant_idx: u8 = match self {
            AB::B { .. } => 0u8,
            AB::NegatedVariant { .. } => 1u8,
        };
        writer.write_all(&variant_idx.to_le_bytes())?;
        match self {
            AB::B { c, d, .. } => {
                <i32 as borsh::BorshSerialize>::serialize(c, writer)?;
                <u32 as borsh::BorshSerialize>::serialize(d, writer)?;
            }
            AB::NegatedVariant { beta, .. } => {
                <String as borsh::BorshSerialize>::serialize(beta, writer)?;
            }
        }
        ::core::result::Result::Ok(())
    }
}
